--- a/app/views/spree/admin/pages/_form.html.erb
+++ b/app/views/spree/admin/pages/_form.html.erb
@@ -1,98 +1,121 @@
 <div data-hook="admin_page_form_fields">
-  <div class="left eight columns alpha" data-hook="admin_page_form_left">
-
+  <div class="row" data-hook="admin_page_form_left">
+<div class='col-sm-8'>
     <%= f.field_container :title do %>
-      <%= f.label :title %> <span class="required">*</span><br />
-      <%= f.text_field :title, :class => 'fullwidth title' %>
+	<div class='form-group'>
+      <%= f.label :title %> <span class="text-danger">*</span><br />
+      <%= f.text_field :title, :class => 'form-control' %>
       <%= f.error_message_on :title %>
+  </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :slug do %>
-      <%= f.label :slug %> <span class="required">*</span><br />
-      <%= f.text_field :slug, :class => 'fullwidth title' %>
+		<div class='form-group'>
+      <%= f.label :slug %> <span class="text-danger">*</span><br />
+      <%= f.text_field :slug, :class => 'form-control' %>
       <%= f.error_message_on :slug %>
+	  </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :body do %>
-      <%= f.label :body %> <span class="required">*</span><br />
-      <%= f.text_area :body, {rows: 12, :class => 'fullwidth'} %>
+		<div class='form-group'>
+      <%= f.label :body %> <span class="text-danger">*</span><br />
+      <%= f.text_area :body, {rows: 12, :class => 'form-control'} %>
       <%= f.error_message_on :body %>
+	  </div><!-- form-group -->
     <% end %>
 
-  </div>
-  <div class="right four columns omega" data-hook="admin_page_form_right">
+  </div><!-- col -->
+  <div class="col-sm-4" data-hook="admin_page_form_right">
 
     <%= f.field_container :layout do %>
-      <%= f.label :layout %><br />
-      <%= f.text_field :layout, :class => 'fullwidth title' %>
+		<div class='form-group'>
+      <%= f.label :layout %>
+      <%= f.text_field :layout, :class => 'form-control' %>
+	   </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :foreign_link do %>
-      <%= f.label :foreign_link %><br />
-      <%= f.text_field :foreign_link, :class => 'fullwidth title' %>
+	<div class='form-group'>
+      <%= f.label :foreign_link %>
+      <%= f.text_field :foreign_link, :class => 'form-control' %>
+	   </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :position do %>
-      <%= f.label :position %><br />
-      <%= f.number_field :position, :min => 0, :class => 'fullwidth title' %>
+	<div class='form-group'>
+      <%= f.label :position %>
+      <%= f.number_field :position, :min => 0, :class => 'form-control' %>
+	   </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :show_in_sidebar do %>
+	<div class='form-group'>
       <%= f.check_box :show_in_sidebar %>
       <%= f.label :show_in_sidebar %>
+	   </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :show_in_header do %>
+	<div class='form-group'>
       <%= f.check_box :show_in_header %>
       <%= f.label :show_in_header %>
+	   </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :show_in_footer do %>
+	<div class='form-group'>
       <%= f.check_box :show_in_footer %>
       <%= f.label :show_in_footer %>
+	   </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :visible do %>
+	<div class='form-group'>
       <%= f.check_box :visible %>
       <%= f.label :visible %>
+	   </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :render_layout_as_partial do %>
+	<div class='form-group'>
       <%= f.check_box :render_layout_as_partial %>
       <%= f.label :render_layout_as_partial %>
+	   </div><!-- form-group -->
     <% end %>
 
     <%= f.field_container :stores do %>
+	<div class='form-group'>
       <%= f.label :stores, Spree.t(:stores)%><br />
       <% Spree::Store.all.each do |store| %>
         <%= check_box_tag "page[store_ids][]", store.id, @page.stores.include?(store) %> <%= store.name %>
       <% end %>
+	   </div><!-- form-group -->
     <% end %>
-    
-  </div>
+      </div><!-- col -->
+  </div><!-- row -->
 
-  <div data-hook="admin_page_form_meta" class="alpha omega twelve columns">
-
+  <div data-hook="admin_page_form_meta" class="row">
+<div class='col-md-12'>
     <%= f.field_container :meta_title do %>
-      <%= f.label :meta_title %><br />
-      <%= f.text_field :meta_title, :class => 'fullwidth title' %>
+      <%= f.label :meta_title %>
+      <%= f.text_field :meta_title, :class => 'form-control' %>
       <%= f.error_message_on :meta_title %>
     <% end %>
 
     <%= f.field_container :meta_keywords do %>
-      <%= f.label :meta_keywords %><br />
-      <%= f.text_field :meta_keywords, :class => 'fullwidth title' %>
+      <%= f.label :meta_keywords %>
+      <%= f.text_field :meta_keywords, :class => 'form-control' %>
       <%= f.error_message_on :meta_keywords %>
     <% end %>
 
     <%= f.field_container :meta_description do %>
-      <%= f.label :meta_description %><br />
-      <%= f.text_field :meta_description, :class => 'fullwidth title' %>
+      <%= f.label :meta_description %>
+      <%= f.text_field :meta_description, :class => 'form-control' %>
       <%= f.error_message_on :meta_description %>
     <% end %>
-
-  </div>
-  <div class="clear"></div>
+      </div><!-- col -->
+  </div><!-- row -->  
+  
   <div data-hook="admin_page_form_additional_fields"></div>
-  <div class="clear"></div>
 </div>
