--- a/app/views/spree/admin/pages/new.html.erb
+++ b/app/views/spree/admin/pages/new.html.erb
@@ -1,11 +1,11 @@
-<%= render 'spree/admin/shared/configuration_menu' %>
+<%#= render 'spree/admin/shared/configuration_menu' %>
 
 <% content_for :page_title do %>
-   <%= Spree.t("static_content.static_pages") %> <i class="icon-arrow-right"></i> <%= Spree.t("static_content.new_page") %>
+   <%= Spree.t("static_content.static_pages") %> <i class=" icon icon-arrow-right"></i> <%= Spree.t("static_content.new_page") %>
 <% end %>
 
 <% content_for :page_actions do %>
-  <li><%= button_link_to Spree.t(:back_to_static_pages_list), spree.admin_pages_url, :icon => 'icon-arrow-left' %></li>
+<%= button_link_to Spree.t(:back_to_static_pages_list), spree.admin_pages_url, :icon => 'icon icon-arrow-left' %>
 <% end %>
 
 <%= render "spree/shared/error_messages", :target => @page %>
